--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 }
 
 #live {
+	display: none;
 	color: red;
 	font-size: 60pt;
 	text-align: center;
@@ -13,6 +14,7 @@
 }
 
 #notLive {
+	display: none;
 	color: #2C2C2C;
 	font-size: 60pt;
 	text-align: center;
