--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 #live {
-	display: none;
+	/*display: none;*/
 	color: red;
 	font-size: 60pt;
 	text-align: center;
@@ -14,7 +14,7 @@
 }
 
 #notLive {
-	display: none;
+	/*display: none;*/
 	color: #2C2C2C;
 	font-size: 60pt;
 	text-align: center;
