start conversion for time zone and fixed timer (wip)

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,13 @@
 }
 
 #timeLeft {
+	color: blue;
+	font-weight: bold;
+	font-size: 30pt;
+	text-align: center;
+}
+
+#seg {
 	color: red;
 	font-weight: bold;
 	font-size: 30pt;
